--- a/package.json
+++ b/package.json
@@ -6,44 +6,44 @@
   "main": "./gulpfire.babel.js",
   "private": false,
   "devDependencies": {
-    "apache-server-configs": "^3.0.0",
-    "autoprefixer": "^8.4.1",
+    "apache-server-configs": "~3.0.0",
+    "autoprefixer": "~9.1.0",
     "babel-core": "~6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "~7.1.5",
     "babel-preset-es2015": "~6.24.1",
-    "babel-preset-es2015-riot": "^1.1.0",
+    "babel-preset-es2015-riot": "~1.1.0",
     "babel-preset-es2017": "~6.24.1",
-    "css-loader": "^0.28.11",
+    "css-loader": "~1.0.0",
     "del": "~3.0.0",
-    "eslint-config-google": "^0.9.1",
-    "firebase-tools": "^3.0.4",
-    "gulp": "^3.9.1",
-    "gulp-babel": "~7.0.0",
+    "eslint-config-google": "~0.9.1",
+    "firebase-tools": "~4.0.3",
+    "gulp": "~3.9.1",
+    "gulp-babel": "~7.0.1",
     "gulp-cache": "~1.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-eslint": "~4.0.0",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-if": "^2.0.2",
+    "gulp-concat": "~2.6.1",
+    "gulp-cssnano": "~2.1.3",
+    "gulp-eslint": "~5.0.0",
+    "gulp-htmlmin": "~4.0.0",
+    "gulp-if": "~2.0.2",
     "gulp-imagemin": "~4.1.0",
-    "gulp-load-plugins": "^1.4.0",
-    "gulp-newer": "^1.3.0",
+    "gulp-load-plugins": "~1.5.0",
+    "gulp-newer": "~1.4.0",
     "gulp-sass": "~4.0.1",
     "gulp-size": "~3.0.0",
-    "gulp-useref": "^3.1.2",
-    "postcss-loader": "^2.1.5",
-    "psi": "^3.0.0",
+    "gulp-useref": "~3.1.5",
+    "postcss-loader": "~3.0.0",
+    "psi": "~3.1.0",
     "require-dir": "~1.0.0",
-    "riot": "^3.9.3",
-    "riot-hot-reload": "^1.0.0",
-    "riot-tag-loader": "^2.0.2",
+    "riot": "~3.11.1",
+    "riot-hot-reload": "~1.0.0",
+    "riot-tag-loader": "~2.1.0",
     "run-sequence": "~2.2.1",
-    "style-loader": "^0.21.0",
-    "sw-precache": "^5.0.0",
-    "sw-toolbox": "^3.4.0",
-    "swiper": "~4.2.6",
-    "webpack": "~4.7.0",
-    "webpack-cli": "^2.0.15",
+    "style-loader": "~0.22.1",
+    "sw-precache": "~5.2.1",
+    "sw-toolbox": "~3.6.0",
+    "swiper": "~4.3.5",
+    "webpack": "~4.16.5",
+    "webpack-cli": "~2.0.15",
     "webpack-dev-server": "~3.1.4",
     "webpack-stream": "~4.0.3"
   },
