--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "gotois-landing-page",
-  "description": "gotois Landing Page",
+  "description": "goto Interactive Software Landing Page",
   "version": "2.0.0",
   "author": "Denis Baskovsky",
   "main": "./gulpfire.babel.js",
   "private": false,
+  "dependencies": {
+    "swiper": "~4.3.5",
+    "riot": "~3.11.1"
+  },
   "devDependencies": {
     "apache-server-configs": "~3.0.0",
-    "autoprefixer": "~9.1.0",
-    "babel-core": "~6.26.0",
+    "autoprefixer": "~9.1.3",
+    "babel-core": "~6.26.3",
     "babel-loader": "~7.1.5",
     "babel-preset-es2015": "~6.24.1",
     "babel-preset-es2015-riot": "~1.1.0",
@@ -16,7 +20,7 @@
     "css-loader": "~1.0.0",
     "del": "~3.0.0",
     "eslint-config-google": "~0.9.1",
-    "firebase-tools": "~4.0.3",
+    "firebase-tools": "~4.2.0",
     "gulp": "~3.9.1",
     "gulp-babel": "~7.0.1",
     "gulp-cache": "~1.0.2",
@@ -34,18 +38,16 @@
     "postcss-loader": "~3.0.0",
     "psi": "~3.1.0",
     "require-dir": "~1.0.0",
-    "riot": "~3.11.1",
     "riot-hot-reload": "~1.0.0",
     "riot-tag-loader": "~2.1.0",
     "run-sequence": "~2.2.1",
     "style-loader": "~0.22.1",
     "sw-precache": "~5.2.1",
     "sw-toolbox": "~3.6.0",
-    "swiper": "~4.3.5",
-    "webpack": "~4.16.5",
-    "webpack-cli": "~2.0.15",
-    "webpack-dev-server": "~3.1.4",
-    "webpack-stream": "~4.0.3"
+    "webpack": "~4.17.1",
+    "webpack-cli": "~3.1.0",
+    "webpack-dev-server": "~3.1.6",
+    "webpack-stream": "~5.1.1"
   },
   "engines": {
     "node": ">=9.4.0",
