--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
   "main": "./gulpfire.babel.js",
   "private": false,
   "dependencies": {
-    "swiper": "~4.3.5",
-    "riot": "~3.11.1"
+    "swiper": "~4.4.1",
+    "riot": "~3.12.0"
   },
   "devDependencies": {
     "apache-server-configs": "~3.0.0",
     "autoprefixer": "~9.1.3",
-    "babel-core": "~6.26.3",
-    "babel-loader": "~7.1.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "~6.24.1",
     "babel-preset-es2015-riot": "~1.1.0",
     "babel-preset-es2017": "~6.24.1",
     "css-loader": "~1.0.0",
     "del": "~3.0.0",
-    "eslint-config-google": "~0.9.1",
+    "eslint-config-google": "~0.10.0",
     "firebase-tools": "~4.2.0",
     "gulp": "~3.9.1",
-    "gulp-babel": "~7.0.1",
+    "gulp-babel": "~8.0.0",
     "gulp-cache": "~1.0.2",
     "gulp-concat": "~2.6.1",
     "gulp-cssnano": "~2.1.3",
     "gulp-eslint": "~5.0.0",
-    "gulp-htmlmin": "~4.0.0",
+    "gulp-htmlmin": "~5.0.1",
     "gulp-if": "~2.0.2",
     "gulp-imagemin": "~4.1.0",
     "gulp-load-plugins": "~1.5.0",
@@ -41,17 +41,17 @@
     "riot-hot-reload": "~1.0.0",
     "riot-tag-loader": "~2.1.0",
     "run-sequence": "~2.2.1",
-    "style-loader": "~0.22.1",
+    "style-loader": "~0.23.0",
     "sw-precache": "~5.2.1",
     "sw-toolbox": "~3.6.0",
-    "webpack": "~4.17.1",
+    "webpack": "~4.19.1",
     "webpack-cli": "~3.1.0",
     "webpack-dev-server": "~3.1.6",
     "webpack-stream": "~5.1.1"
   },
   "engines": {
-    "node": ">=9.4.0",
-    "npm": "~6.0.0"
+    "node": "~10.10.0",
+    "npm": "~6.4.1"
   },
   "scripts": {
     "serve": "webpack-dev-server --progress --watch --hot --colors --open -d --port 3000",
