--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "devDependencies": {
     "apache-server-configs": "~3.0.0",
-    "autoprefixer": "~9.1.3",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
+    "autoprefixer": "~9.1.5",
+    "babel-core": "~6.26.3",
+    "babel-loader": "~7.1.5",
     "babel-preset-es2015": "~6.24.1",
     "babel-preset-es2015-riot": "~1.1.0",
     "babel-preset-es2017": "~6.24.1",
@@ -37,16 +37,16 @@
     "gulp-useref": "~3.1.5",
     "postcss-loader": "~3.0.0",
     "psi": "~3.1.0",
-    "require-dir": "~1.0.0",
+    "require-dir": "~1.1.0",
     "riot-hot-reload": "~1.0.0",
     "riot-tag-loader": "~2.1.0",
     "run-sequence": "~2.2.1",
     "style-loader": "~0.23.0",
     "sw-precache": "~5.2.1",
     "sw-toolbox": "~3.6.0",
-    "webpack": "~4.19.1",
-    "webpack-cli": "~3.1.0",
-    "webpack-dev-server": "~3.1.6",
+    "webpack": "~4.20.2",
+    "webpack-cli": "~3.1.1",
+    "webpack-dev-server": "~3.1.9",
     "webpack-stream": "~5.1.1"
   },
   "engines": {
