--- a/app/manifest.json
+++ b/app/manifest.json
@@ -34,6 +34,11 @@
       "src": "images/touch/chrome-touch-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "images/touch/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "related_applications": [{
