--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2017": "~6.24.1",
     "css-loader": "~1.0.1",
     "del": "~3.0.0",
+    "eslint": "~5.9.0",
     "eslint-config-google": "~0.11.0",
     "firebase-tools": "~6.1.1",
     "gulp": "~3.9.1",
@@ -37,14 +38,14 @@
     "gulp-useref": "~3.1.6",
     "postcss-loader": "~3.0.0",
     "psi": "~3.1.0",
-    "require-dir": "~1.1.0",
+    "require-dir": "~1.2.0",
     "riot-hot-reload": "~1.0.0",
     "riot-tag-loader": "~2.1.0",
     "run-sequence": "~2.2.1",
     "style-loader": "~0.23.1",
     "sw-precache": "~5.2.1",
     "sw-toolbox": "~3.6.0",
-    "webpack": "~4.20.2",
+    "webpack": "~4.26.1",
     "webpack-cli": "~3.1.2",
     "webpack-dev-server": "~3.1.10",
     "webpack-stream": "~5.1.1"
