--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "./gulpfire.babel.js",
   "private": false,
   "dependencies": {
-    "swiper": "~4.4.2",
-    "riot": "~3.13.2"
+    "riot": "~3.13.2",
+    "swiper": "~4.4.2"
   },
   "devDependencies": {
     "apache-server-configs": "~3.0.0",
@@ -17,11 +17,12 @@
     "babel-preset-es2015": "~6.24.1",
     "babel-preset-es2015-riot": "~1.1.0",
     "babel-preset-es2017": "~6.24.1",
+    "babel-register": "~6.26.0",
     "css-loader": "~1.0.1",
     "del": "~3.0.0",
     "eslint": "~5.9.0",
     "eslint-config-google": "~0.11.0",
-    "firebase-tools": "~6.1.1",
+    "firebase-tools": "~6.1.2",
     "gulp": "~3.9.1",
     "gulp-babel": "~8.0.0",
     "gulp-cache": "~1.0.2",
@@ -52,7 +53,7 @@
   },
   "engines": {
     "node": "~10.10.0",
-    "npm": "~6.4.1"
+    "npm": "~6.5.0"
   },
   "scripts": {
     "serve": "webpack-dev-server --progress --watch --hot --colors --open -d --port 3000",
