--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {},
   "devDependencies": {
     "firebase-tools": "~6.3.0",
+    "html-minifier": "~3.5.21",
     "psi": "~3.1.0"
   },
   "engines": {
@@ -16,9 +17,11 @@
   },
   "scripts": {
     "test": "exit 0",
-    "copy-static": "cp -r static/ .tmp && cp -r mobirise/ .tmp",
-    "deploy": "./node_modules/.bin/gulp deploy",
-    "pagespeed": "./node_modules/.bin/gulp pagespeed"
+    "minify": "html-minifier --collapse-whitespace --remove-comments --use-short-doctype --minify-css true --minify-js true --input-dir ./mobirise/ --output-dir .tmp/ --file-ext html",
+    "start": "npm run copy && firebase serve --only hosting",
+    "copy": "mkdir www && mkdir www/assets && mkdir www/assets/images ; cp -r ./static/ ./www/ ; cp -r ./mobirise/assets/images ./www/assets ; cp ./.tmp/index.html ./www/index.html",
+    "deploy": "firebase deploy --only hosting --token $FIREBASE_TOKEN",
+    "pagespeed": "psi --strategy mobile https://tewst-landing-page.firebaseapp.com"
   },
   "homepage": "https://github.com/gotois/landing-page",
   "repository": {
