--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "gotois-landing-page",
   "description": "goto Interactive Software Landing Page",
-  "version": "3.0.7",
+  "version": "3.0.8",
   "author": "Denis Baskovsky",
   "main": "mobirise/project.mobirise",
   "private": false,
   "dependencies": {},
   "devDependencies": {
     "amphtml-validator": "~1.0.23",
-    "firebase-tools": "~6.7.0",
+    "firebase-tools": "~6.9.2",
     "html-minifier": "~4.0.0",
-    "libxmljs": "^0.19.5",
+    "libxmljs": "~0.19.5",
     "psi": "~3.1.0",
-    "replace-in-file": "~4.0.0"
+    "replace-in-file": "~4.1.0"
   },
   "license": "unlicense",
   "engines": {
@@ -22,7 +22,7 @@
   "scripts": {
     "test": "exit 0",
     "minify": "html-minifier --collapse-whitespace --remove-comments --use-short-doctype --minify-css true --minify-js true --input-dir ./mobirise/ --output-dir .tmp/ --file-ext html",
-    "start": "npm run copy && firebase serve --only hosting",
+    "start": "npm run minify && npm run html-replace && npm run copy && firebase serve --only hosting",
     "copy": "bash scripts/copy.sh",
     "deploy": "firebase deploy --only hosting --token $FIREBASE_TOKEN",
     "amp-validate": "amphtml-validator ./www/index.html",
