--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,10 @@
       {
         "source": "/",
         "destination": "/index.html"
+      },
+      {
+        "source": "/archive",
+        "destination": "/archive.html"
       }
     ],
     "headers": [
