--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "gotois-landing-page",
-  "description": "goto Interactive Software Landing Page",
-  "version": "3.0.8",
+  "description": "goto Interactive Software: Landing Page",
+  "version": "3.0.9",
   "author": "Denis Baskovsky",
   "main": "mobirise/project.mobirise",
   "private": false,
   "dependencies": {},
   "devDependencies": {
     "amphtml-validator": "~1.0.23",
-    "firebase-tools": "~6.9.2",
+    "firebase-tools": "~6.10.0",
     "html-minifier": "~4.0.0",
     "libxmljs": "~0.19.5",
     "psi": "~3.1.0",
@@ -16,7 +16,7 @@
   },
   "license": "unlicense",
   "engines": {
-    "node": "~11.14.0",
+    "node": "~12.2.0",
     "npm": "~6.9.0"
   },
   "scripts": {
