--- a/firebase.json
+++ b/firebase.json
@@ -7,10 +7,18 @@
       {
         "source": "/",
         "destination": "/index.html"
+      }
+    ],
+    "redirects": [
+      {
+        "source": "/archive.html",
+        "destination": "/archive",
+        "type": 301
       },
       {
-        "source": "/archive",
-        "destination": "/archive.html"
+        "source": "/mission.html",
+        "destination": "/mission",
+        "type": 301
       }
     ],
     "headers": [
