--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "gotois-landing-page",
   "description": "goto Interactive Software: Landing Page",
-  "version": "3.0.9",
+  "version": "3.0.10",
   "author": "Denis Baskovsky",
   "main": "mobirise/project.mobirise",
   "private": false,
   "dependencies": {},
   "devDependencies": {
     "amphtml-validator": "~1.0.23",
-    "firebase-tools": "~6.10.0",
+    "firebase-tools": "~6.11.0",
     "html-minifier": "~4.0.0",
     "libxmljs": "~0.19.5",
     "psi": "~3.1.0",
@@ -16,8 +16,8 @@
   },
   "license": "unlicense",
   "engines": {
-    "node": "~12.2.0",
-    "npm": "~6.9.0"
+    "node": "12.x",
+    "npm": "6.9.0"
   },
   "scripts": {
     "test": "exit 0",
@@ -30,7 +30,7 @@
     "html-replace": "node scripts/html-replace.js",
     "pagespeed": "psi --strategy mobile https://tewst-landing-page.firebaseapp.com"
   },
-  "homepage": "https://github.com/gotois/landing-page",
+  "homepage": "https://gotointeractive.com/",
   "repository": {
     "type": "git",
     "url": "git://github.com/gotois/landing-page.git"
