hosting rules upd

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,8 @@
 {
   "hosting": {
     "public": "./www",
+    "cleanUrls": true,
+    "trailingSlash": true,
     "ignore": [
     ],
     "rewrites": [
@@ -11,17 +13,21 @@
     ],
     "redirects": [
       {
-        "source": "/archive.html",
-        "destination": "/archive",
-        "type": 301
-      },
-      {
-        "source": "/mission.html",
-        "destination": "/mission",
+        "source": "/index.html",
+        "destination": "/",
         "type": 301
       }
     ],
     "headers": [
+      {
+        "source": "**/*.@(jpg|jpeg|gif|png)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=7200"
+          }
+        ]
+      },
       {
         "source": "404.html",
         "headers": [
