--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,10 @@
       {
         "source": "/",
         "destination": "/index.html"
+      },
+      {
+        "source": "/**",
+        "destination": "/index.html"
       }
     ],
     "redirects": [
