--- a/firebase.json
+++ b/firebase.json
@@ -20,6 +20,16 @@
         "source": "/index.html",
         "destination": "/",
         "type": 301
+      },
+      {
+        "source": "/%23Botris",
+        "destination": "/archive",
+        "type": 301
+      },
+      {
+        "source": "/Botris",
+        "destination": "/archive",
+        "type": 301
       }
     ],
     "headers": [
