--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gotois-landing-page",
   "description": "goto Interactive Software: Landing Page",
-  "version": "3.0.12",
+  "version": "3.0.13",
   "author": "Denis Baskovsky",
   "main": "mobirise/project.mobirise",
   "private": false,
@@ -12,7 +12,8 @@
     "html-minifier": "~4.0.0",
     "libxmljs": "~0.19.5",
     "psi": "~3.1.0",
-    "replace-in-file": "~4.1.0"
+    "replace-in-file": "~4.1.0",
+    "typograf-cli": "~4.1.1"
   },
   "license": "unlicense",
   "engines": {
@@ -20,14 +21,10 @@
     "npm": "6.9.0"
   },
   "scripts": {
-    "test": "exit 0",
-    "minify": "html-minifier --collapse-whitespace --remove-comments --use-short-doctype --minify-css true --minify-js true --input-dir ./mobirise/ --output-dir .tmp/ --file-ext html",
-    "start": "npm run minify && npm run html-replace && npm run copy && firebase serve --only hosting",
-    "copy": "bash scripts/copy.sh",
+    "build": "bash scripts/build.sh",
+    "dev": "npm run build && firebase serve --only hosting",
     "deploy": "firebase deploy --only hosting --token $FIREBASE_TOKEN",
-    "amp-validate": "amphtml-validator ./www/index.html",
-    "sitemap-validate": "node scripts/sitemap-validator.js",
-    "html-replace": "node scripts/html-replace.js",
+    "test": "bash scripts/test.sh",
     "pagespeed": "psi --strategy mobile https://tewst-landing-page.firebaseapp.com"
   },
   "homepage": "https://gotointeractive.com/",
