opensearch.xml headers fix

--- a/firebase.json
+++ b/firebase.json
@@ -27,6 +27,15 @@
         ]
       },
       {
+        "source": "opensearch.xml",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/opensearchdescription+xml"
+          }
+        ]
+      },
+      {
         "source": "404.html",
         "headers": [
           {
