--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "dependencies": {},
   "devDependencies": {
     "amphtml-validator": "1.0.23",
-    "firebase-tools": "7.1.1",
+    "firebase-tools": "7.4.0",
     "html-minifier": "4.0.0",
-    "libxmljs": "0.19.5",
+    "libxmljs": "0.19.7",
     "psi": "3.1.0",
-    "replace-in-file": "4.1.1",
+    "replace-in-file": "4.1.3",
     "typograf-cli": "4.1.1"
   },
   "license": "unlicense",
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "build": "bash scripts/build.sh",
-    "dev": "npm run build && firebase serve --only hosting",
+    "dev": "npm run build && firebase serve --only hosting --host 0.0.0.0",
     "deploy": "firebase deploy --only hosting --token $FIREBASE_TOKEN",
     "test": "bash scripts/test.sh && echo 'test done'",
     "pagespeed": "psi --strategy mobile https://tewst-landing-page.firebaseapp.com"
