--- a/firebase.json
+++ b/firebase.json
@@ -26,7 +26,7 @@
           },
           {
             "key": "DNT",
-            "value": 1
+            "value": "1"
           }
         ]
       },
