--- a/static/manifest.json
+++ b/static/manifest.json
@@ -12,6 +12,15 @@
   "theme_color": "#16161d",
   "orientation": "any",
   "permissions": [],
+  "chrome_settings_overrides": {
+    "homepage": "https://gotointeractive.com",
+    "search_provider": {
+      "name": "gotois",
+      "search_url": "https://cse.google.com/cse?cx=013887321856262968721:y8vq-syjqom&q={searchTerms}",
+      "keyword": "gotois",
+      "favicon_url": "https://gotointeractive.com/icon.png"
+    }
+  },
   "background": {
   },
   "icons": [
