--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "devDependencies": {
     "amphtml-validator": "1.0.31",
-    "firebase-tools": "8.4.1",
+    "firebase-tools": "8.4.3",
     "html-minifier": "4.0.0",
     "libxmljs": "0.19.7",
     "psi": "4.0.1",
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build": "bash scripts/build.sh",
-    "clean": "rm -rf .tmp/",
+    "clean": "rm -rf .tmp/ www/",
     "dev": "npm run build && firebase serve --only hosting --host 0.0.0.0",
     "deploy": "firebase deploy --only hosting --token $FIREBASE_TOKEN",
     "test": "bash scripts/test.sh && echo 'test done'",
