--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "gotois-landing-page",
   "description": "goto Interactive Software: Landing Page",
   "version": "3.1.0",
-  "author": "Denis Baskovsky",
+  "author": {
+    "name": "gotois",
+    "email": "no-reply@gotointeractive.com"
+  },
   "main": "mobirise/project.mobirise",
   "private": false,
   "devDependencies": {
     "amphtml-validator": "1.0.31",
+    "cheerio": "1.0.0-rc.3",
     "firebase-tools": "8.4.3",
     "html-minifier": "4.0.0",
     "libxmljs": "0.19.7",
     "psi": "4.0.1",
     "replace-in-file": "4.3.1",
+    "turbo-rss": "1.0.8",
     "typograf-cli": "4.1.3"
   },
   "license": "unlicense",
@@ -22,7 +27,8 @@
   "scripts": {
     "build": "bash scripts/build.sh",
     "clean": "rm -rf .tmp/ www/",
-    "dev": "npm run build && firebase serve --only hosting --host 0.0.0.0",
+    "dev": "npm run build && npm run serve",
+    "serve": "firebase serve --only hosting --host 0.0.0.0",
     "deploy": "firebase deploy --only hosting --token $FIREBASE_TOKEN",
     "test": "bash scripts/test.sh && echo 'test done'",
     "pagespeed": "psi --strategy mobile https://tewst-landing-page.firebaseapp.com"
