--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "production": "tewst-landing-page"
+    "production": "tewst-landing-page",
+    "default": "tewst-landing-page"
   }
 }
