--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "firebase-tools": "8.4.3",
     "html-minifier": "4.0.0",
     "libxmljs": "0.19.7",
-    "psi": "4.0.1",
+    "lighthouse": "6.0.0",
     "replace-in-file": "4.3.1",
     "turbo-rss": "1.0.8",
     "typograf-cli": "4.1.3"
@@ -31,7 +31,7 @@
     "serve": "firebase serve --host 0.0.0.0",
     "deploy": "firebase deploy --token $FIREBASE_TOKEN",
     "test": "bash scripts/test.sh && echo 'test done'",
-    "pagespeed": "psi --strategy mobile https://tewst-landing-page.firebaseapp.com"
+    "pagespeed": "mkdir -p reports && lighthouse https://tewst-landing-page.web.app --budget-path=./budget.json --output json --output-path ./reports/report.json"
   },
   "homepage": "https://gotointeractive.com/",
   "repository": {
