service_account dialog

--- a/firebase.json
+++ b/firebase.json
@@ -20,6 +20,10 @@
       {
         "source": "/suggest/**",
         "function": "suggest"
+      },
+      {
+        "source": "/dialog",
+        "function": "dialog"
       }
     ],
     "redirects": [
