--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "node": "8"
   },
   "dependencies": {
+    "dialogflow": "1.2.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
