mobirise-optimizator package

--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,7 @@
     "ignore": [
       "firebase.json",
       "**/.*",
+      ".DS_Store",
       "**/node_modules/**"
     ],
     "cleanUrls": true,
