--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "amphtml-validator": "1.0.31",
     "cheerio": "1.0.0-rc.3",
     "firebase-tools": "8.4.3",
-    "html-minifier": "4.0.0",
     "libxmljs": "0.19.7",
     "lighthouse": "6.1.0",
-    "replace-in-file": "4.3.1",
-    "turbo-rss": "1.0.8",
-    "typograf-cli": "4.1.3"
+    "mobirise-optimizator": "git+https://github.com/qertis/mobirise-optimizator.git",
+    "turbo-rss": "1.0.8"
   },
   "license": "unlicense",
   "engines": {
