--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gotois-functions",
-  "description": "Cloud Functions for Firebase",
+  "description": "Firebase Functions for gotois",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "dialogflow": "1.2.0",
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-admin": "8.13.0",
+    "firebase-functions": "3.7.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "0.2.1"
   },
   "private": true
 }
