--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "gotois-functions",
   "description": "Firebase Functions for gotois",
   "scripts": {
-    "serve": "firebase emulators:start --only functions",
+    "serve": "firebase emulators:start",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -12,9 +12,16 @@
     "node": "8"
   },
   "dependencies": {
+    "dotenv": "8.2.0",
     "dialogflow": "1.2.0",
+    "express": "4.17.1",
     "firebase-admin": "8.13.0",
-    "firebase-functions": "3.7.0"
+    "firebase-functions": "3.7.0",
+    "grant-express": "5.4.4",
+    "jose": "2.0.2",
+    "node-fetch": "2.6.1",
+    "oidc-provider": "6.29.5",
+    "validator": "13.1.17"
   },
   "devDependencies": {
     "firebase-functions-test": "0.2.1"
