--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
   "main": "mobirise/project.mobirise",
   "private": false,
   "devDependencies": {
-    "amphtml-validator": "1.0.33",
-    "cheerio": "1.0.0-rc.3",
-    "firebase-tools": "8.4.3",
+    "amphtml-validator": "1.0.34",
+    "cheerio": "1.0.0-rc.9",
+    "firebase-tools": "8.20.0",
     "libxmljs": "0.19.7",
-    "lighthouse": "6.4.1",
+    "lighthouse": "6.5.0",
     "mobirise-optimizator": "git+https://github.com/qertis/mobirise-optimizator.git",
-    "ngrok": "3.3.0",
-    "turbo-rss": "1.0.8"
+    "ngrok": "3.4.1",
+    "turbo-rss": "1.2.1"
   },
   "license": "unlicense",
   "engines": {
-    "node": "10",
-    "npm": "6.9.x"
+    "node": "12",
+    "npm": "6.14.x"
   },
   "scripts": {
+    "prebuild": "npm run clean",
     "build": "bash scripts/build.sh",
     "clean": "rm -rf .tmp/ www/",
     "dev": "npm run build && npm run serve & npm run expose",
     "serve": "firebase serve --host 0.0.0.0",
     "expose": "ngrok http 5001",
-    "deploy": "firebase use production && firebase deploy --token $FIREBASE_TOKEN",
+    "deploy": "firebase use production && firebase deploy --token $FIREBASE_TOKEN --project=tewst-landing-page",
     "test": "bash scripts/test.sh && echo 'test done'",
     "pagespeed": "mkdir -p reports && lighthouse https://tewst-landing-page.web.app --budget-path=./budget.json --output json --output-path ./reports/report.json"
   },
