--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "goto Interactive Software: Landing Page",
   "version": "3.1.0",
   "author": {
-    "name": "gotois",
-    "email": "no-reply@gotointeractive.com"
+    "name": "Denis Baskovsky",
+    "email": "baskovsky@ya.ru"
   },
   "main": "mobirise/project.mobirise",
   "private": false,
